App/src/styles/style.scss
@import url('../assets/fonts/Gilroy/stylesheet.css');
@import url('../assets/fonts/PeaceSans/stylesheet.css');
@import url('../assets/fonts/Montserrat/stylesheet.css');
@import url('../assets/fonts/Bakbak-One/stylesheet.css');
@import url('../assets/fonts/FontAwesome/stylesheet.css');

$main-color: #545c80;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
ul {
  list-style: none;
}
a {
  text-decoration: none;
}
body {
  display: flex;
  align-items: center;
  justify-content: center;
  background: #ffffff;
  padding: 30px;
}
.container {
  max-width: 1440px;
  margin: 0 auto;
}

.wrapper {
  background: linear-gradient(135deg, #545c80, #1f2435);
  border-radius: 20px;
  width: 100%;
  min-height: 90vh;
  box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.2);
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
  z-index: 1;
  &-active {
    display: block;
    background: #fff;
  }
}

.welcome {
  z-index: 5;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  opacity: 1;

  position: relative;
  animation: fadeIn 0.3s ease-in-out;
  &__title {
    font-family: 'Bakbak-One';
    font-weight: 400;
    font-size: 100px;
    color: #ffffff;
    transition: 0.3s ease-in-out;
    margin-top: -100px;
  }
  &__subtitle {
    font-family: 'Bakbak-One';
    font-weight: 400;
    font-size: 30px;
    color: #ffffff;
    transition: 0.3s ease-in-out;
    margin-top: -10px;
    cursor: pointer;
    text-decoration: underline;

    &:hover {
      color: #7eb6ff;
    }
  }
  &__btn {
    background: rgba(255, 255, 255, 0.2);
    backdrop-filter: blur(2px);
    padding: 15px 110px;
    font-size: 50px;
    cursor: pointer;
    position: absolute;
    top: 50%;
    left: 50%;
    z-index: 6;
    transform: translate(-50%, 35%);
    border-radius: 5px;
    border: 2px rgba(255, 255, 255, 0.1) solid;
    font-family: 'Bakbak-One';
    font-weight: 400;
    color: white;
    opacity: 1;
    transition: 0.3s ease-in-out;
    animation: none;
    &:hover {
      background: rgb(255, 255, 255);
      color: $main-color;
      border: 2px rgb(255, 255, 255) solid;
    }
    &-animated {
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      animation: expansion 1s ease-in;
      animation-delay: 0.3s;
      background: rgb(255, 255, 255);
      color: $main-color;
      border: 2px rgb(255, 255, 255) solid;
    }
  }
}
.hidden-animation-slow {
  animation: fadeOut 1s ease-in-out;
}
.hidden-animation-fast {
  animation: fadeOut 0.3s ease-in-out;
}
.hidden {
  display: none;
  opacity: 0;
}

@keyframes expansion {
  0% {
    padding: 15px 110px;
  }
  100% {
    padding: 1500px 3000px;
  }
}
@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes fadeOut {
  0% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

.snowflake {
  --size: 1vw;
  width: var(--size);
  height: var(--size);
  background: white;
  border-radius: 50%;
  position: absolute;
  top: -5vh;
}

@keyframes snowfall {
  0% {
    transform: translate3d(var(--left-ini), 0, 0);
  }
  100% {
    transform: translate3d(var(--left-end), 110vh, 0);
  }
}

@for $i from 1 through 50 {
  .snowflake:nth-child(#{$i}) {
    --size: #{random(5) * 0.2}vw;
    --left-ini: #{random(20) - 10}vw;
    --left-end: #{random(20) - 10}vw;
    left: #{random(100)}vw;
    animation: snowfall #{5 + random(10)}s linear infinite;
    animation-delay: -#{random(10)}s;
  }
}

/* added small blur every 6 snowflakes*/
.snowflake:nth-child(6n) {
  filter: blur(1px);
}

